# claude-swarm-public

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  FEATURES_IMPLEMENTED.md  FRAMEWORK_SYNC.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SANITIZATION_REPORT.md  openapi.json  pyproject.toml  pytest.ini  requirements.txt
.githooks/: pre-commit
artifacts/: background-registry.yaml  running-jobs.yaml
config/: routing.yaml  swarm.yaml  swarm.yaml.example  training.yaml
deploy/: install-health-monitor.sh  swarm-alerts.yml  swarm-dashboard.service  swarm-health-monitor.service  swarm-health.service  swarm-metrics-exporter.service  swarm-sync.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  HANDOFF.md  PUBLIC_RELEASE.md  RELIABILITY_FEATURES.md  RUNBOOK.md  churn-analysis-2026-04-17.md  remote-orchestration.md
hooks/: swarm-heartbeat-fast.sh  swarm-heartbeat.sh  swarm-session-end.sh  swarm-session-start.sh  swarm-task-check.sh
k8s/: configmap.yaml.example  deployment.yaml  dlq-prune-cronjob.yaml  service.yaml
plans/: 2026-04-19-claude-swarm-peripherals-DoD.md  claude-swarm-plan.md  hydra-swarm-v3.md  swarm-v2.md
scripts/: check-public-leaks.sh  dlq_prune.py  export_openapi.py  health-check.sh  hydra-ipc  phase1_drain_restore.py  redis-bootstrap.py  render-swarm-config.sh  setup-client.sh  setup-primary.sh  setup-replica.sh  sync-claude-env.sh  sync-from-git.sh  sync-to-git.sh
src/: agent_db.py  auto_dispatch.py  backend.py  background_registry.py  broker_client.py  cb_schema.py  celery_app.py  claude_backend.py  collaborative.py  config_loader.py  config_validation.py  conflicts.py  context_assembly.py  cost_tracker.py  crash_handler.py  credential_broker.py  dashboard.py  dashboard_types.py  event_log.py  events.py  events_redis.py  events_schema.py  events_schema_compat.py  gpu_cli.py  gpu_discovery.py  gpu_events_consumer.py  gpu_scheduler_v2.py  gpu_slots.py  gpu_slots_redis.py  health_monitor.py  health_rules.py  heartbeat.py  hydra_dispatch.py  ipc_bridge.py  launcher.py  living_spec.py  model_router.py  orchestrator.py  performance_rating.py  pipeline.py  (+25 more)
swarm_spec_impl/: __init__.py  task_queue.py
systemd/: hydra-credential-broker.service
tests/: conftest.py  conftest_swarm_spec.py  test_agent_db.py  test_alert_rules.py  test_auto_dispatch.py  test_backend.py  test_background_registry.py  test_backpressure.py  test_cb_schema.py  test_celery_tasks.py  test_chaos.py  test_claude_backend.py  test_collaborative.py  test_collaborative_locking.py  test_config_loader.py  test_conflicts.py  test_context.py  test_context_assembly.py  test_cost_tracker.py  test_crash_handler.py  test_credential_broker.py  test_dashboard.py  test_dashboard_auth.py  test_deadline_watchdog.py  test_decompose.py  test_dispatch_history.py  test_dispatch_spec.py  test_dlq_persist.py  test_dlq_prune.py  test_dlq_prune_cli.py  test_events.py  (+65 more)
(+410 files in other folders)
